started developing a chat app on top of quasi (find out what I need)

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -13,6 +13,13 @@
   </head>
   
   <body>
-    Inline Help
+    <div id="chat">
+      <ul id="messages"></ul>
+      
+      <div id="controls">
+        <input type="text" id="username" />
+        <input type="text" id="send" />
+      </div>
+    </div>
   </body>
 </html>
