--- a/app/public/index.html
+++ b/app/public/index.html
@@ -17,8 +17,8 @@
       <ul id="messages"></ul>
       
       <div id="controls">
-        <input type="text" id="username" />
-        <input type="text" id="send" />
+        Username: <input type="text" id="username" />
+        Message: <input type="text" id="send" />
       </div>
     </div>
   </body>
